# QnA-Rag-Ai-Agent

./: .gitignore  PROGRESS.md  README.md  STATUS.md  TODO.md  app.py  pyproject.toml  requirements.txt
Docs/: ALTERNATIVE_GUIDES.md  ARCHITECTURE_AND_MODULARITY.md  FILE_DEPENDENCIES.md  FOCUSED_USE_CASE.md  NAVIGATION.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  STREAMLIT_QUICK_START.md
config/prompts/: document_qa.txt
src/: __init__.py
src/core/: document_processor.py  embeddings.py
src/data/: vectorstore.py
src/data/loaders/: base.py  csv_loader.py  docx_loader.py  excel_loader.py  json_loader.py  pdf_loader.py  text_loader.py
src/interfaces/: streamlit_app.py
src/interfaces/components/: chat_section.py  document_list.py  upload_section.py
src/utils/: file_handler.py  session_manager.py
tests/: test_file_upload.py
