[project]
name = "qna-rag-ai-agent-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.0",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-ollama>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "pydantic-settings>=2.11.0",
    "python-docx>=1.2.0",
    "streamlit>=1.51.0",
]
